--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,7 +4,8 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
+media_folder: "build/images/uploads" # Media files will be stored here for processing prior to build
+public_folder: "images/uploads"
 
 collections:
   - name: "news" # Used in routes, e.g., /admin/collections/blog
