--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,4 +19,5 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Category", name: "category", widget: "select", options: ["boardroom", "event", "match", "squad"]}
       - {label: "Featured Image", name: "thumbnail", widget: "image", required: "false"}
+      - {label: "Description", name: "description", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
