--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+permalink: /:year/:month/:day/:title/
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
