Start work on match previews

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,11 @@ permalink: /:year/:month/:day/:title/
 
 exclude: [build, package.json, node_modules, Gemfile, Gemfile.lock, README.md, gulpfile.js]
 
+collections:
+  previews:
+    output: true
+    permalink: /:year/:month/:day/:title/
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
