--- a/admin/config.yml
+++ b/admin/config.yml
@@ -29,7 +29,7 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "news-article"}
-      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Headline", name: "headline", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Category", name: "category", widget: "select", options: ["boardroom", "chairmans-chat", "event", "match", "squad"]}
       - {label: "Featured Image", name: "thumbnail", widget: "image", required: "false"}
