--- a/admin/config.yml
+++ b/admin/config.yml
@@ -31,7 +31,7 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "news-article"}
       - {label: "Headline", name: "headline", widget: "string"}
       - {label: "Match Date", name: "date", widget: "datetime"}
-      - {label: "Competition", name: "competition", widget: "select", options: ["League", "Scottish Cup", "League Cup", "North of Scotland Cup", "Challenge Cup", "Friendly"]}
+      - {label: "Competition", name: "competition", widget: "select", options: ["League", "Scottish Cup", "League Cup", "North of Scotland Cup", "Challenge Cup", "Friendly"], }
       - {label: "Featured Image", name: "thumbnail", widget: "image", required: "false"}
       - {label: "Description", name: "description", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
