--- a/admin/config.yml
+++ b/admin/config.yml
@@ -31,7 +31,7 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "news-article"}
       - {label: "Headline", name: "headline", widget: "string"}
       - {label: "Match Date", name: "date", widget: "datetime"}
-      - {label: "Home Team", name: "home-team", widget: "select", options: ["Brora Rangers", "Buckie Thistle", "Clachnacuddin", "Cove Rangers", "Deveronvale", ""]}
+      - {label: "Home Team", name: "home-team", widget: "list", options: ["Brora Rangers", "Buckie Thistle", "Clachnacuddin", "Cove Rangers", "Deveronvale", ""]}
       - {label: "Competition", name: "competition", widget: "select", options: ["League", "Scottish Cup", "League Cup", "North of Scotland Cup", "Challenge Cup", "Friendly"], default: "League"}
       - {label: "Featured Image", name: "thumbnail", widget: "image", required: "false"}
       - {label: "Description", name: "description", widget: "string"}
