--- a/admin/config.yml
+++ b/admin/config.yml
@@ -8,9 +8,9 @@ media_folder: "build/images/uploads" # Media files will be stored here for proce
 public_folder: "images/uploads" # Processed images are sent here
 
 collections:
-  - name: "news" # Used in routes, e.g., /admin/collections/blog
-    label: "News" # Used in the UI
-    folder: "_posts/news" # The path to the folder where the documents are stored
+  - name: "articles" # Used in routes, e.g., /admin/collections/blog
+    label: "Articles" # Used in the UI
+    folder: "_posts/articles" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
