--- a/admin/config.yml
+++ b/admin/config.yml
@@ -32,8 +32,8 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Match Date", name: "match-date", widget: "datetime"}
       - {label: "Home Team", name: "home-team", widget: "string"}
-      - {label: "Home Score", name: "home-score", widget: "string"}
+      - {label: "Home Score", name: "home-score", widget: "string", required: "false"}
       - {label: "Away Team", name: "away-team", widget: "string"}
-      - {label: "Away Score", name: "away-score", widget: "string"}
+      - {label: "Away Score", name: "away-score", widget: "string", required: "false"}
       - {label: "Description", name: "description", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Body", name: "body", widget: "markdown", required: "false"}
