Experiment with creating titles from front matter

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -29,7 +29,7 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "news-article"}
-      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Title", name: "title", widget: "string" default: "{{home-team}} {{away-team}} {{competition}}"}
       - {label: "Match Date", name: "match-date", widget: "date"}
       - {label: "Kick Off", name: "kickoff", widget: "string", default: "15:00"}
       - {label: "Status", name: "status", widget: "select", options: ["Upcoming", "Completed", "Postponed", "Abandoned"], default: "Upcoming" }
@@ -39,7 +39,7 @@ collections:
       - {label: "Home Score", name: "home-score", widget: "number", valueType: "int", required: false}
       - {label: "Home Score aet", name: "home-score-aet", widget: "number", valueType: "int", required: false}
       - {label: "Home Score Pens", name: "home-score-pens", widget: "number", valueType: "int", required: false}
-      - {label: "Away Team", name: "away-team", widget: "string"}
+      - {label: "Away Team", name: "away-team", widget: "relation", collection: "clubs", searchFields: ["title"], valueField: "title"}
       - {label: "Away Score", name: "away-score", widget: "number", valueType: "int", required: false}
       - {label: "Away Score aet", name: "away-score-aet", widget: "number", valueType: "int", required: false}
       - {label: "Away Score Pens", name: "away-score-pens", widget: "number", valueType: "int", required: false}
