--- a/admin/config.yml
+++ b/admin/config.yml
@@ -29,23 +29,22 @@ collections:
     slug: "{{home-team}}-{{away-team}}-{{competition}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "news-article"}
-      - {label: "Title", name: "title", widget: "string", default: {{slug}}}
       - {label: "Match Date", name: "match-date", widget: "date"}
       - {label: "Kick Off", name: "kickoff", widget: "string", default: "15:00"}
       - {label: "Status", name: "status", widget: "select", options: ["Upcoming", "Completed", "Postponed", "Abandoned"], default: "Upcoming" }
       - {label: "Competition", name: "competition", widget: "select", options: ["League", "North of Scotland Cup", "League Cup", "Challenge Cup", "Scottish Cup", "Friendly"], default: "League" }
       - {label: "Venue - only required if not at home club's ground", name: "venue", widget: "relation", collection: "clubs", searchFields: ["title"], valueField: "ground", required: false}
       - {label: "Home Team", name: "home-team", widget: "relation", collection: "clubs", searchFields: ["title"], valueField: "title"}
+      - {label: "Away Team", name: "away-team", widget: "relation", collection: "clubs", searchFields: ["title"], valueField: "title"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description", name: "description", widget: "string"}
       - {label: "Home Score", name: "home-score", widget: "number", valueType: "int", required: false}
       - {label: "Home Score aet", name: "home-score-aet", widget: "number", valueType: "int", required: false}
       - {label: "Home Score Pens", name: "home-score-pens", widget: "number", valueType: "int", required: false}
-      - {label: "Away Team", name: "away-team", widget: "relation", collection: "clubs", searchFields: ["title"], valueField: "title"}
       - {label: "Away Score", name: "away-score", widget: "number", valueType: "int", required: false}
       - {label: "Away Score aet", name: "away-score-aet", widget: "number", valueType: "int", required: false}
       - {label: "Away Score Pens", name: "away-score-pens", widget: "number", valueType: "int", required: false}
-      - {label: "Description", name: "description", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown", required: false}
-
 
   - name: "clubs"
     label: "Clubs"
