--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-responsive": "^2.9.0",
+    "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.6.5"
   },
   "scripts": {
